# tilelang-bench

./: .gitignore  REPORT.md  probe.py  probe2.py
env/: README.md
env/agent/: pyproject.toml
env/golden/: pyproject.toml
harness/: common.sh  gen_tasks.py  golden_freeze.sha256  kernels_probe.py  kernels_probe2.py  probe_models.py  report.py  reset_task.sh  run_agent.py  run_sweep.py  run_sweep_parallel.py  score_correct.py  score_perf.py  score_task.sh  select_tasks.py  setup_task.sh  snapshot_repo.sh  solve_env.sh  validate_tasks.py  verify_clean.sh  zen_model.py
runs/: sweep_full.json
tasks/: DESIGN.md  candidates.json  manifest.json
tasks/debug/debug_abs_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_abs_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_add_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_add_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_gemm_noclear_fp16/: solution.py  task.json
tasks/debug/debug_gemm_noclear_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_mul_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_mul_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_relu_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_relu_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_square_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_square_fp32/: problem.py  solution.py  task.json
tasks/debug/debug_sub_fp16/: problem.py  solution.py  task.json
tasks/debug/debug_sub_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_abs_diff_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_abs_diff_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_abs_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_abs_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_add_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_add_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_add_relu_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_add_relu_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_add_sq_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_add_sq_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_avg_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_avg_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_bias_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_bias_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_cast_f32f16/: problem.py  solution.py  task.json
tasks/implement/impl_clamp01_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_clamp01_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_diff_sq_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_diff_sq_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_exp_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_exp_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_gelu_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_gelu_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_gemm_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_gemm_fp32/: solution.py  task.json
tasks/implement/impl_gemv_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_gemv_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_layernorm_fp16/: solution.py  task.json
tasks/implement/impl_layernorm_fp32/: solution.py  task.json
tasks/implement/impl_leakyrelu_fp16/: problem.py  solution.py  task.json
tasks/implement/impl_leakyrelu_fp32/: problem.py  solution.py  task.json
tasks/implement/impl_max_fp16/: problem.py  (+2 more)
(+192 files in other folders)
