[project]
name = "repo-eval-agent"
version = "0.0.0"
description = "Pinned agent-harness environment for the tilelang eval harness (the .venv-agent)."
requires-python = "==3.12.*"
dependencies = [
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.2",
    "datasets==5.0.0",
    "dill==0.4.1",
    "distro==1.9.0",
    "fastuuid==0.14.0",
    "filelock==3.29.4",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.16.1",
    "idna==3.18",
    "importlib-metadata==8.9.0",
    "jinja2==3.1.6",
    "jiter==0.16.0",
    "jsonschema-specifications==2025.9.1",
    "jsonschema==4.26.0",
    "linkify-it-py==2.1.0",
    "litellm==1.90.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdit-py-plugins==0.6.1",
    "mdurl==0.1.2",
    "mini-swe-agent==2.4.3",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "numpy==2.5.0",
    "openai==2.44.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "platformdirs==4.10.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.5.2",
    "pyarrow==24.0.0",
    "pydantic-core==2.46.4",
    "pydantic==2.13.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.6.28",
    "requests==2.34.2",
    "rich==15.0.0",
    "rpds-py==2026.5.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tenacity==9.1.4",
    "textual==8.2.7",
    "tiktoken==0.13.0",
    "tokenizers==0.23.1",
    "tqdm==4.68.3",
    "typer==0.26.8",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uc-micro-py==2.0.0",
    "urllib3==2.7.0",
    "wcwidth==0.8.2",
    "xxhash==3.8.0",
    "yarl==1.24.2",
    "zipp==4.1.0",
]

[tool.uv]
# Pin to the harness host platform for a deterministic, single-target lock.
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
