[project]
name = "repo-eval-golden"
version = "0.0.0"
description = "Pinned golden/perf runtime for the tilelang eval harness (the read-only .venv)."
requires-python = "==3.12.*"
dependencies = [
    "apache-tvm-ffi==0.1.11",
    "cloudpickle==3.1.2",
    "cuda-bindings==13.3.1",
    "cuda-pathfinder==1.5.5",
    "cuda-toolkit==13.0.2",
    "filelock==3.29.4",
    "fsspec==2026.6.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "ml-dtypes==0.5.4",
    "mpmath==1.3.0",
    "networkx==3.6.1",
    "numpy==2.5.0",
    "nvidia-cublas==13.1.1.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.20.0.48",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.1",
    "nvidia-nccl-cu13==2.29.7",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "psutil==7.2.2",
    "setuptools==81.0.0",
    "sympy==1.14.0",
    "tilelang==0.1.11",
    "torch==2.12.1",
    "torch-c-dlpack-ext==0.1.5",
    "tqdm==4.68.3",
    "triton==3.7.1",
    "typing-extensions==4.15.0",
    "z3-solver==4.15.4.0",
]

[tool.uv]
# GPU wheels (CUDA 13, torch, tilelang) ship only for linux/x86_64 + cpython.
# Lock for this single target rather than universally.
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
